Fix SemanticAnalyzer